--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Swetha ❤️ Bala - 02.07.2025</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="We are getting hitched - The dates are 21st & 29th of October '23 and we would like you to be a part of it." />
+	<meta name="description" content="We are getting hitched - The dates are 01st & 02nd of July'25 and we would like you to be a part of it." />
 	<meta name="keywords" content="Swetha,Bala,wedding,website,rsvp" />
 	<meta name="author" content="Swetha & Bala" />
 
@@ -16,7 +16,7 @@
 	<meta property="og:image" content="images/og.jpg"/>
 	<meta property="og:site_name" content="Swetha ❤️ Bala - 02.07.2025">
     <meta property="og:title" content="Swetha ❤️ Bala - 02.07.2025">
-    <meta property="og:description" content="We are getting hitched - The dates are 21st & 29th of October '23 and we would like you to be a part of it.">
+    <meta property="og:description" content="We are getting hitched - The dates are 01st & 02nd of July'25 and we would like you to be a part of it.">
 	<!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
@@ -90,7 +90,7 @@
 							<h1>Swetha &amp; Bala</h1>
 							<br>
 							<img src="images/fprint.png" alt="Swetha + Bala"> 
-							<h2>29.10.2023</h2>
+							<h2>02.07.2025</h2>
 							<h2>"I have found the one whom my soul loves." <br>Song of Solomon 3:4</h2>
 							<div class="flipTimebox">
 								<div class="clock clock-fix"></div>
@@ -122,7 +122,7 @@
 									<h3>Betrothal</h3>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>21 October 2023</span>
+										<span>01 July 2025</span>
 									</div>
 									<div class="event-col">
 
@@ -138,7 +138,7 @@
 									<h3>Wedding</h3>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>29 October 2023</span>
+										<span>29 July 2025</span>
 									</div>
 									<div class="event-col">
 
@@ -146,7 +146,7 @@
 										<span>12:00 PM</span>
 									</div>
 									<p>At <b>St. Antony's Church Cheriyappilly, North Paravur.</b> Followed by lunch at <b>IMA Hall, North Paravur</b></p>
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3927.690238117892!2d76.24293817588756!3d10.124421489987455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0810402ea732f5%3A0x7e23209bf83c2a9b!2sSt.Antony&#39;s%20Roman%20Catholic%20Church!5e0!3m2!1sen!2sin!4v1696094216568!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3927.690238117892!2d76.24293817588756!3d10.124401489987455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0810402ea732f5%3A0x7e23209bf83c2a9b!2sSt.Antony&#39;s%20Roman%20Catholic%20Church!5e0!3m2!1sen!2sin!4v1696094016568!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 								</div>
 							</div>
 						</div>
