bala changes dates

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<br>
 							<img src="images/fprint.png" alt="Swetha + Bala"> 
 							<h2>02.07.2025</h2>
-							<h2>"I have found the one whom my soul loves." <br>Song of Solomon 3:4</h2>
+							<h2>"You meet thousands of people and none of them really touch you." <br>And then you meet one person, and your life is changed. Forever.</h2>
 							<div class="flipTimebox">
 								<div class="clock clock-fix"></div>
 							  </div>
