--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				<div class="display-t">
 					<div class="display-tc">
 						<div class="col-md-10 col-md-offset-1">
-							<div class="col-md-6 col-sm-6 text-center">
+<!--							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
 									<h3>Betrothal</h3>
 									<div class="event-col">
@@ -132,21 +132,33 @@
 									<p>At <b>St. Vincent De Paul Church Edathotty, Kannur.</b> Followed by lunch at <b>Robin's Wedding Cafe, Edathotty.</b></p>
 									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3903.673315773661!2d75.71257847590881!3d11.927808088299846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba5cd2b69442ebf%3A0x41b4e77a403a15b4!2sDe%20Paul%20Church%2C%20Edathotty!5e0!3m2!1sen!2sin!4v1696094112600!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 								</div>
-							</div>
+							</div>-->
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
+									<h3>Reception</h3>
+									<div class="event-col">
+										<i class="icon-calendar"></i>
+										<span>01 July 2025</span>
+									</div>
+									<div class="event-col">
+
+										<i class="icon-clock"></i>
+										<span>11:30 AM</span>
+									</div>
 									<h3>Wedding</h3>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>29 July 2025</span>
+										<span>02 July 2025</span>
 									</div>
 									<div class="event-col">
 
 										<i class="icon-clock"></i>
 										<span>12:00 PM</span>
 									</div>
-									<p>At <b>St. Antony's Church Cheriyappilly, North Paravur.</b> Followed by lunch at <b>IMA Hall, North Paravur</b></p>
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3927.690238117892!2d76.24293817588756!3d10.124401489987455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0810402ea732f5%3A0x7e23209bf83c2a9b!2sSt.Antony&#39;s%20Roman%20Catholic%20Church!5e0!3m2!1sen!2sin!4v1696094016568!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+									
+									<p>At <b>MAS v7 marriage hall</b></p>
+									<p>49, Poonamallee High Rd, Manavalanagar</p>
+						<iframe src="https://www.google.com/maps/place/MAS+v7+marriage+hall/@13.1128275,79.911881,17z/data=!3m1!4b1!4m6!3m5!1s0x3a5291aca0c14c17:0x8367cd45ac26f2be!8m2!3d13.1128275!4d79.911881!16s%2Fg%2F11sfk2cm0l?entry=ttu&g_ep=EgoyMDI1MDIxMi4wIKXMDSoASAFQAw%3D%3D" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 								</div>
 							</div>
 						</div>
