--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 									
 									<p>At <b>MAS v7 marriage hall</b></p>
 									<p>49, Poonamallee High Rd, Manavalanagar</p>
-						<iframe src="https://www.google.com/maps/place/MAS+v7+marriage+hall/@13.1128275,79.911881,17z/data=!3m1!4b1!4m6!3m5!1s0x3a5291aca0c14c17:0x8367cd45ac26f2be!8m2!3d13.1128275!4d79.911881!16s%2Fg%2F11sfk2cm0l?entry=ttu&g_ep=EgoyMDI1MDIxMi4wIKXMDSoASAFQAw%3D%3D" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+						<iframe src="https://maps.app.goo.gl/3JtJiwgVNKUNKGdT7" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 								</div>
 							</div>
 						</div>
