--- a/index.html
+++ b/index.html
@@ -180,21 +180,21 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/RS1.jpg); "> 
-						<a href="images/RS1.jpg">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/BS1.jpg); "> 
+						<a href="images/BS1.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/RS2.jpg); "> 
-						<a href="images/RS2.jpg">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/BS2.jpg); "> 
+						<a href="images/BS2.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/RS3.jpg); "> 
-						<a href="images/RS3.jpg">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/BS3.jpg); "> 
+						<a href="images/BS3.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
